# ADS8192-AI

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AI_REFLECTION.md  CHANGELOG.md  README.md  TESTING.md  api.html  changelog.html  ci.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reproducibility.html  search.html  searchindex.js
.doctrees/: api.doctree  changelog.doctree  ci.doctree  environment.pickle  getting_started.doctree  index.doctree  reproducibility.doctree
.github/workflows/: ci.yml  docs.yml  release.yml
_modules/: index.html
_modules/biosci_chat/: client.html  prompts.html
_sources/: api.rst.txt  ci.rst.txt  index.rst.txt  reproducibility.rst.txt
biosci_chat/: __init__.py  cli.py  client.py  prompts.py
docs/: conf.py  getting_started.rst
tests/: conftest.py  test_cli.py  test_client.py  test_prompts.py
